WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127422
REGRESSION(
r162441
): [GTK] ResourceLoader is broken when there aren't user extensions
https://bugs.webkit.org/show_bug.cgi?id=127422
Summary
REGRESSION(r162441): [GTK] ResourceLoader is broken when there aren't user ex...
Carlos Garcia Campos
Reported
2014-01-22 03:40:37 PST
This is making several unit tests to timeout because the load finished signal is never emitted because the web view is waiting forever for the main resource load.
Attachments
Patch
(1.86 KB, patch)
2014-01-22 03:42 PST
,
Carlos Garcia Campos
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2014-01-22 03:42:26 PST
Created
attachment 221854
[details]
Patch
Carlos Garcia Campos
Comment 2
2014-01-22 10:43:30 PST
Committed
r162533
: <
http://trac.webkit.org/changeset/162533
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug