REGRESSION(r162441): [GTK] ResourceLoader is broken when there aren't user extensions https://bugs.webkit.org/show_bug.cgi?id=127422

Reviewed by Anders Carlsson.

* WebProcess/gtk/WebGtkExtensionManager.cpp:
(WebKit::WebGtkExtensionManager::initialize): Always create the
WebKitWebExtension object since it's used internally to implement
the ResourceLoader client.

Canonical link: https://commits.webkit.org/145431@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162533 268f45cc-cd09-0410-ab3c-d52691b4dbfc